--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,5 @@ jobs:
         cargo clippy --workspace -- -D clippy::all
     - name: clippy-action
       uses: giraffate/clippy-action@main
+      with:
+        reporter: 'github-check'
