--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,5 @@ jobs:
     - name: clippy-action
       uses: giraffate/clippy-action@main
       with:
-        reporter: 'github-check'
+        reporter: 'github-pr-review'
         level: 'warning'
