--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         rustup component add clippy
         cargo clippy --workspace -- -D clippy::all
     - name: clippy-action
-      uses: giraffate/clippy-action@main
+      uses: giraffate/clippy-action@update1
       with:
         reporter: 'github-check'
         level: 'warning'
