--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,6 @@ jobs:
     - name: clippy-action
       uses: giraffate/clippy-action@update1
       with:
-        reporter: 'github-check'
+        reporter: 'github-pr-review'
         level: 'warning'
         github_token: ${{ secrets.GITHUB_TOKEN }}
