--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build
       run: |
         rustup component add clippy
-        cargo clippy --workspace -- -D clippy::all
+        cargo clippy --workspace -- -W clippy::all
     - name: clippy-action
       uses: giraffate/clippy-action@update1
       with:
