--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Install latest nightly
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly
-        override: true
-        components: rustfmt, clippy
-    - name: clippy-action
-      uses: giraffate/clippy-action@main
+    - uses: dtolnay/rust-toolchain@stable
+    - uses: giraffate/clippy-action@main
       with:
         reporter: 'github-pr-review'
         github_token: ${{ secrets.GITHUB_TOKEN }}
